typeos, layout bugs, and cosmetic

--- a/src/app/components/home/home.component.sass
+++ b/src/app/components/home/home.component.sass
@@ -3,4 +3,5 @@
     padding: 8px
 
     .columns
-        margin-bottom: 10px
+        .column:last-child
+            padding-bottom: 40px
