--- a/src/app/components/home/list/list.component.sass
+++ b/src/app/components/home/list/list.component.sass
@@ -3,16 +3,17 @@
     max-width: 1200px
     padding: 0 1rem
 
-    .cell
-        position: relative
-
     .cell img 
         display: block
         margin: 0px auto
-    .cell .subtitle
-        position: absolute
-        bottom: 5px
-        left: 5px
+    .cell
+        .card
+            .card-content
+                background-color: #262626
+                color: #fff
+                font-size: 0.8em
+                a
+                    color: #00d1b2
 
 @media screen and (min-width: 600px) 
     .grid 
